src/blocks/comment/comment.scss
@import 'dependencies.scss';
.comment {
  column-gap: 10px;
  display: grid;
  grid-template-columns: minmax(40px, 48fr) 653fr;
  padding-top: 12px;
  row-gap: 10px;
}

