Prevent like button stretching in comment

--- a/src/blocks/comment/comment.scss
+++ b/src/blocks/comment/comment.scss
@@ -1,5 +1,6 @@
 @import 'dependencies.scss';
 .comment {
+  align-items: start;
   column-gap: 10px;
   display: grid;
   grid-template-columns: minmax(40px, 48fr) 653fr;
